[gd_scene load_steps=2 format=3 uid="uid://csuefnnbe46dr"]

[ext_resource type="Script" path="res://addons/dialogue/example/dialogue_example.gd" id="1_vwjjf"]

[node name="DialogueExample" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vwjjf")

[node name="DialogueBox" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -78.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="DialogueBox"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DialogueLine" type="VBoxContainer" parent="DialogueBox/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="DialogueBox/PanelContainer/MarginContainer/DialogueLine"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="DialogueBox/PanelContainer/MarginContainer/DialogueLine/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Speaker:"
uppercase = true

[node name="DialogueLineLabel" type="RichTextLabel" parent="DialogueBox/PanelContainer/MarginContainer/DialogueLine/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Some text goes here"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueBox/PanelContainer/MarginContainer/DialogueLine"]
layout_mode = 2
alignment = 2

[node name="ContinueButton" type="Button" parent="DialogueBox/PanelContainer/MarginContainer/DialogueLine/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="DialogueOptions" type="VBoxContainer" parent="DialogueBox/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
